WIP: Codegen for related code enhancements, still not done
- Cleaned up protoc-gen-rkcy parsing, now we build better structures
- New rocketcycle_proto that has better named fields options
- Field options are parsed correctly, but no codegen yet
- Changed RelatedConcerns to just Related
- RelatedConfigs don't exist now, but will be rolled into Related
- Fixed check_file_headers to check itself as well
