# examples/rpg/crud_handlers/postgresql/character.go
@@ -22,7 +22,7 @@ func init() {
 
 type Character struct{}
 
-func (c *Character) Read(ctx context.Context, key string) (*pb.Character, *pb.CharacterRelatedConcerns, *rkcy.CompoundOffset, error) {
+func (c *Character) Read(ctx context.Context, key string) (*pb.Character, *pb.CharacterRelated, *rkcy.CompoundOffset, error) {
 	inst := &pb.Character{
 		Currency: &pb.Character_Currency{},
 	}
@@ -81,7 +81,7 @@ func (c *Character) Create(ctx context.Context, inst *pb.Character, cmpdOffset *
 	return inst, nil
 }
 
-func (c *Character) Update(ctx context.Context, inst *pb.Character, relCnc *pb.CharacterRelatedConcerns, cmpdOffset *rkcy.CompoundOffset) error {
+func (c *Character) Update(ctx context.Context, inst *pb.Character, relCnc *pb.CharacterRelated, cmpdOffset *rkcy.CompoundOffset) error {
 	return c.upsert(ctx, inst, relCnc, cmpdOffset)
 }
 
@@ -127,7 +127,7 @@ func (*Character) hasItem(id string, items []*pb.Character_Item) bool {
 	return false
 }
 
-func (c *Character) upsert(ctx context.Context, inst *pb.Character, relCnc *pb.CharacterRelatedConcerns, cmpdOffset *rkcy.CompoundOffset) error {
+func (c *Character) upsert(ctx context.Context, inst *pb.Character, relCnc *pb.CharacterRelated, cmpdOffset *rkcy.CompoundOffset) error {
 	_, err := pool().Exec(
 		ctx,
 		"CALL rpg.sp_upsert_character($1, $2, $3, $4, $5, $6, $7)",
