# examples/rpg/crud_handlers/postgresql/player.go
@@ -21,7 +21,7 @@ func init() {
 
 type Player struct{}
 
-func (*Player) Read(ctx context.Context, key string) (*pb.Player, *pb.PlayerRelatedConcerns, *rkcy.CompoundOffset, error) {
+func (*Player) Read(ctx context.Context, key string) (*pb.Player, *pb.PlayerRelated, *rkcy.CompoundOffset, error) {
 	inst := &pb.Player{}
 	offset := &rkcy.CompoundOffset{}
 	err := pool().QueryRow(ctx, "SELECT id, username, active, mro_generation, mro_partition, mro_offset FROM rpg.player WHERE id=$1", key).
@@ -53,7 +53,7 @@ func (p *Player) Create(ctx context.Context, inst *pb.Player, cmpdOffset *rkcy.C
 	return inst, nil
 }
 
-func (p *Player) Update(ctx context.Context, inst *pb.Player, relCnc *pb.PlayerRelatedConcerns, cmpdOffset *rkcy.CompoundOffset) error {
+func (p *Player) Update(ctx context.Context, inst *pb.Player, relCnc *pb.PlayerRelated, cmpdOffset *rkcy.CompoundOffset) error {
 	return p.upsert(ctx, inst, relCnc, cmpdOffset)
 }
 
@@ -69,7 +69,7 @@ func (*Player) Delete(ctx context.Context, key string, cmpdOffset *rkcy.Compound
 	return err
 }
 
-func (*Player) upsert(ctx context.Context, inst *pb.Player, relCnc *pb.PlayerRelatedConcerns, offset *rkcy.CompoundOffset) error {
+func (*Player) upsert(ctx context.Context, inst *pb.Player, relCnc *pb.PlayerRelated, offset *rkcy.CompoundOffset) error {
 	_, err := pool().Exec(
 		ctx,
 		"CALL rpg.sp_upsert_player($1, $2, $3, $4, $5, $6)",
